[OPIK-5768] [BE] fix: restrict online evaluation rules to SDK source traces/spans
Online evaluation rules were running on all traces regardless of source,
including playground and experiment traces. This caused confusing duplicate
scoring when using evaluation suites in the playground.

Now traces/spans are only scored if their source is SDK (or null for legacy
backward compatibility). Playground traces with selected_rule_ids metadata
are still scored by the explicitly selected rules.