@@ -4,10 +4,13 @@ import com.comet.opik.api.FeedbackScoreItem;
 import com.comet.opik.api.FeedbackScoreItem.FeedbackScoreBatchItem;
 import com.comet.opik.api.LogItem.LogLevel;
 import com.comet.opik.api.ScoreSource;
+import com.comet.opik.api.Source;
+import com.comet.opik.api.Span;
 import com.comet.opik.api.Trace;
 import com.comet.opik.api.TraceUpdate;
 import com.comet.opik.api.evaluators.AutomationRuleEvaluatorLlmAsJudge;
 import com.comet.opik.api.evaluators.AutomationRuleEvaluatorLlmAsJudge.LlmAsJudgeCode;
+import com.comet.opik.api.evaluators.AutomationRuleEvaluatorSpanLlmAsJudge;
 import com.comet.opik.api.evaluators.AutomationRuleEvaluatorTraceThreadLlmAsJudge.TraceThreadLlmAsJudgeCode;
 import com.comet.opik.api.evaluators.AutomationRuleEvaluatorType;
 import com.comet.opik.api.evaluators.LlmAsJudgeMessage;
@@ -29,7 +32,6 @@ import com.comet.opik.api.resources.utils.resources.ProjectResourceClient;
 import com.comet.opik.api.resources.utils.resources.TraceResourceClient;
 import com.comet.opik.domain.FeedbackScoreService;
 import com.comet.opik.domain.llm.ChatCompletionService;
-import com.comet.opik.domain.llm.MessageContentNormalizer;
 import com.comet.opik.domain.llm.structuredoutput.InstructionStrategy;
 import com.comet.opik.domain.llm.structuredoutput.ToolCallingStrategy;
 import com.comet.opik.extensions.DropwizardAppExtensionProvider;
@@ -37,7 +39,6 @@ import com.comet.opik.extensions.RegisterApp;
 import com.comet.opik.infrastructure.DatabaseAnalyticsFactory;
 import com.comet.opik.podam.PodamFactoryUtils;
 import com.comet.opik.utils.JsonUtils;
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.uuid.Generators;
 import com.fasterxml.uuid.impl.TimeBasedEpochGenerator;
 import com.github.dockerjava.api.exception.InternalServerErrorException;
@@ -67,7 +68,9 @@ import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.EnumSource;
 import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.NullSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -156,9 +159,6 @@ class OnlineScoringEngineTest {
 
             {{context}}
             """;
-
-    private static final String IMAGE_PLACEHOLDER = MessageContentNormalizer.IMAGE_PLACEHOLDER_START + "%s"
-            + MessageContentNormalizer.IMAGE_PLACEHOLDER_END;
 
     private final String unquoted;
 
@@ -299,10 +299,15 @@ class OnlineScoringEngineTest {
         Mockito.reset(aiProxyService, feedbackScoreService, eventBus);
     }
 
-    @Test
+    @ParameterizedTest
+    @EnumSource(value = Source.class, names = {"SDK"})
+    @NullSource
     @DisplayName("test Redis producer and consumer base flow")
-    void testRedisProducerAndConsumerBaseFlow(OnlineScoringSampler onlineScoringSampler) throws Exception {
-        var projectId = projectResourceClient.createProject(PROJECT_NAME, API_KEY, WORKSPACE_NAME);
+    void testRedisProducerAndConsumerBaseFlow(Source source, OnlineScoringSampler onlineScoringSampler) {
+        Mockito.reset(feedbackScoreService, aiProxyService, eventBus);
+
+        var projectName = "project-" + RandomStringUtils.secure().nextAlphanumeric(32);
+        var projectId = projectResourceClient.createProject(projectName, API_KEY, WORKSPACE_NAME);
 
         var evaluatorCode = JsonUtils.readValue(TEST_EVALUATOR, LlmAsJudgeCode.class);
 
@@ -311,7 +316,7 @@ class OnlineScoringEngineTest {
         evaluatorsResourceClient.createEvaluator(evaluator, WORKSPACE_NAME, API_KEY);
 
         var traceId = generator.generate();
-        var trace = createTrace(traceId, projectId);
+        var trace = createTrace(traceId, projectId, source);
         var event = new TracesCreated(List.of(trace), WORKSPACE_ID, USER_NAME);
 
         Mockito.doNothing().when(eventBus).register(Mockito.any());
@@ -349,7 +354,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("test filtering evaluators by trace metadata")
-    void testFilteringEvaluatorsByTraceMetadata(OnlineScoringSampler onlineScoringSampler) throws Exception {
+    void testFilteringEvaluatorsByTraceMetadata(OnlineScoringSampler onlineScoringSampler) {
         Mockito.reset(feedbackScoreService, aiProxyService, eventBus);
 
         var projectName = "project" + RandomStringUtils.secure().nextAlphanumeric(36);
@@ -373,7 +378,9 @@ class OnlineScoringEngineTest {
                 .add(evaluatorId1.toString())
                 .add(evaluatorId2.toString());
 
-        var trace = createTrace(traceId, projectId).toBuilder()
+        // non-SDK traces, such as playground with "selected_rule_ids" must still be scored
+        // by the explicitly selected evaluators.
+        var trace = createTrace(traceId, projectId, Source.PLAYGROUND).toBuilder()
                 .metadata(metadata)
                 .build();
 
@@ -419,7 +426,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("test User Facing log error when AI provider fails")
-    void testUserFacingLogErrorWhenAIProviderFails(OnlineScoringSampler onlineScoringSampler) throws Exception {
+    void testUserFacingLogErrorWhenAIProviderFails(OnlineScoringSampler onlineScoringSampler) {
         Mockito.reset(feedbackScoreService, aiProxyService, eventBus);
 
         var projectName = "project" + RandomStringUtils.secure().nextAlphanumeric(36);
@@ -465,7 +472,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("test partial trace without end_time is skipped, complete trace is scored once")
-    void testPartialTraceThenCompleteTraceScoresOnlyOnce(OnlineScoringSampler onlineScoringSampler) throws Exception {
+    void testPartialTraceThenCompleteTraceScoresOnlyOnce(OnlineScoringSampler onlineScoringSampler) {
         Mockito.reset(feedbackScoreService, aiProxyService, eventBus);
 
         var projectName = "project" + RandomStringUtils.secure().nextAlphanumeric(36);
@@ -524,7 +531,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("onTracesUpdated when endTime is set triggers scoring")
-    void onTracesUpdatedWhenEndTimeSetTriggersScoring(OnlineScoringSampler onlineScoringSampler) throws Exception {
+    void onTracesUpdatedWhenEndTimeSetTriggersScoring(OnlineScoringSampler onlineScoringSampler) {
         Mockito.reset(feedbackScoreService, aiProxyService, eventBus);
 
         var projectName = "project" + RandomStringUtils.secure().nextAlphanumeric(36);
@@ -546,6 +553,7 @@ class OnlineScoringEngineTest {
                 .input(JsonUtils.getJsonNodeFromString(INPUT))
                 .output(JsonUtils.getJsonNodeFromString(OUTPUT))
                 .endTime(java.time.Instant.now())
+                .source(null)
                 .feedbackScores(null)
                 .build();
         traceResourceClient.createTrace(trace, API_KEY, WORKSPACE_NAME);
@@ -582,8 +590,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("onTracesUpdated when endTime is null does NOT trigger scoring")
-    void onTracesUpdatedWithoutEndTimeDoesNotTriggerScoring(OnlineScoringSampler onlineScoringSampler)
-            throws Exception {
+    void onTracesUpdatedWithoutEndTimeDoesNotTriggerScoring(OnlineScoringSampler onlineScoringSampler) {
         Mockito.reset(feedbackScoreService, aiProxyService, eventBus);
 
         var projectName = "project" + RandomStringUtils.secure().nextAlphanumeric(36);
@@ -608,7 +615,11 @@ class OnlineScoringEngineTest {
         Mockito.verify(feedbackScoreService, Mockito.never()).scoreBatchOfTraces(Mockito.any());
     }
 
-    private Trace createTrace(UUID traceId, UUID projectId) throws JsonProcessingException {
+    private Trace createTrace(UUID traceId, UUID projectId) {
+        return createTrace(traceId, projectId, null);
+    }
+
+    private Trace createTrace(UUID traceId, UUID projectId, Source source) {
         return Trace.builder()
                 .id(traceId)
                 .projectName(PROJECT_NAME)
@@ -617,6 +628,7 @@ class OnlineScoringEngineTest {
                 .input(JsonUtils.getJsonNodeFromString(INPUT))
                 .output(JsonUtils.getJsonNodeFromString(OUTPUT))
                 .endTime(java.time.Instant.now())
+                .source(source)
                 .build();
     }
 
@@ -633,7 +645,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("parse variable mapping into a usable one")
-    void testVariableMapping() throws JsonProcessingException {
+    void testVariableMapping() {
         var evaluatorCode = JsonUtils.readValue(TEST_EVALUATOR, LlmAsJudgeCode.class);
         var variableMappings = OnlineScoringEngine.toVariableMapping(evaluatorCode.variables());
 
@@ -730,7 +742,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("toReplacements should produce valid JSON for complex objects (Python evaluator path)")
-    void testToReplacementsProducesValidJsonForComplexObjects() throws JsonProcessingException {
+    void testToReplacementsProducesValidJsonForComplexObjects() {
         // Given - a trace with a complex nested object in output (similar to the customer's sql_template case)
         var complexOutput = """
                 {
@@ -789,7 +801,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("render message templates with root object variables")
-    void testRenderTemplateWithRootObjects() throws JsonProcessingException {
+    void testRenderTemplateWithRootObjects() {
         // Given
         var messageTemplate = "Full input: {{full_input}}\\nNested field: {{nested_field}}";
         var evaluatorJson = """
@@ -834,7 +846,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("render message templates with output root object")
-    void testRenderTemplateWithOutputRootObject() throws JsonProcessingException {
+    void testRenderTemplateWithOutputRootObject() {
         // Given
         var messageTemplate = "Full output: {{full_output}}";
         var evaluatorJson = """
@@ -874,7 +886,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("render span message templates with root object variables")
-    void testRenderSpanTemplateWithRootObjects() throws JsonProcessingException {
+    void testRenderSpanTemplateWithRootObjects() {
         // Given
         var messageTemplate = "Full input: {{full_input}}\\nNested field: {{nested_field}}";
         var evaluatorJson = """
@@ -894,7 +906,7 @@ class OnlineScoringEngineTest {
                 """.formatted(messageTemplate).trim();
 
         var evaluatorCode = JsonUtils.readValue(evaluatorJson,
-                com.comet.opik.api.evaluators.AutomationRuleEvaluatorSpanLlmAsJudge.SpanLlmAsJudgeCode.class);
+                AutomationRuleEvaluatorSpanLlmAsJudge.SpanLlmAsJudgeCode.class);
         var spanId = generator.generate();
         var projectId = generator.generate();
         var span = createSpan(spanId, projectId);
@@ -923,7 +935,7 @@ class OnlineScoringEngineTest {
     @ParameterizedTest
     @MethodSource
     @DisplayName("render message templates with a trace")
-    void testRenderTemplate(String evaluator) throws JsonProcessingException {
+    void testRenderTemplate(String evaluator) {
         var evaluatorCode = JsonUtils.readValue(evaluator, LlmAsJudgeCode.class);
         var traceId = generator.generate();
         var projectId = generator.generate();
@@ -946,7 +958,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("render message templates with a trace thread")
-    void testRenderTemplateWithTraceThread() throws JsonProcessingException {
+    void testRenderTemplateWithTraceThread() {
         var evaluatorCode = JsonUtils.readValue(TEST_TRACE_THREAD_EVALUATOR, TraceThreadLlmAsJudgeCode.class);
         var traceId = generator.generate();
         var projectId = generator.generate();
@@ -970,7 +982,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("prepare trace thread LLM request with tool-calling strategy")
-    void testPrepareTraceThreadLlmRequestWithToolCallingStrategy() throws JsonProcessingException {
+    void testPrepareTraceThreadLlmRequestWithToolCallingStrategy() {
         var evaluatorCode = JsonUtils.readValue(TEST_TRACE_THREAD_EVALUATOR, TraceThreadLlmAsJudgeCode.class);
         var trace = createTrace(generator.generate(), generator.generate()).toBuilder()
                 .threadId("thread-" + RandomStringUtils.secure().nextAlphanumeric(36))
@@ -986,7 +998,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("prepare LLM request with tool-calling strategy")
-    void testPrepareLlmRequestWithToolCallingStrategy() throws JsonProcessingException {
+    void testPrepareLlmRequestWithToolCallingStrategy() {
         var evaluatorCode = JsonUtils.readValue(TEST_EVALUATOR, LlmAsJudgeCode.class);
         var trace = createTrace(generator.generate(), generator.generate());
 
@@ -999,7 +1011,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("prepare LLM request with instruction strategy")
-    void testPrepareLlmRequestWithInstructionStrategy() throws JsonProcessingException {
+    void testPrepareLlmRequestWithInstructionStrategy() {
         var evaluatorCode = JsonUtils.readValue(TEST_EVALUATOR, LlmAsJudgeCode.class);
         var trace = createTrace(generator.generate(), generator.generate());
 
@@ -1107,7 +1119,7 @@ class OnlineScoringEngineTest {
     @ParameterizedTest
     @MethodSource
     @DisplayName("renderMessages should support keys with dots in their names")
-    void testExtractFromJsonWithDotKey(String key, String jsonBody) throws Exception {
+    void testExtractFromJsonWithDotKey(String key, String jsonBody) {
         // variable mapping: variable 'testVar' maps to 'input.' + key
         var variables = Map.of("testVar", "input." + key);
         var trace = Trace.builder()
@@ -1383,8 +1395,8 @@ class OnlineScoringEngineTest {
         assertThat(isString).isFalse();
         assertThat(isArray).isTrue();
         assertThat(message.asContentList()).hasSize(1);
-        assertThat(message.asContentList().get(0).type()).isEqualTo("text");
-        assertThat(message.asContentList().get(0).text()).isEqualTo("Analyze this video");
+        assertThat(message.asContentList().getFirst().type()).isEqualTo("text");
+        assertThat(message.asContentList().getFirst().text()).isEqualTo("Analyze this video");
     }
 
     @Test
@@ -1443,7 +1455,7 @@ class OnlineScoringEngineTest {
 
         // When & Then
         assertThat(message.isStructuredContent()).isTrue();
-        var videoPart = message.asContentList().get(0);
+        var videoPart = message.asContentList().getFirst();
         assertThat(videoPart.videoUrl().url()).startsWith("data:video/mp4;base64,");
     }
 
@@ -1485,7 +1497,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("should render template variables in array content with video URL from input")
-    void shouldRenderTemplateVariables_whenVideoUrlFromInput() throws JsonProcessingException {
+    void shouldRenderTemplateVariables_whenVideoUrlFromInput() {
         // Given
         var trace = Trace.builder()
                 .id(UUID.randomUUID())
@@ -1522,7 +1534,7 @@ class OnlineScoringEngineTest {
 
         // Then
         assertThat(renderedMessages).hasSize(1);
-        var userMessage = (UserMessage) renderedMessages.get(0);
+        var userMessage = (UserMessage) renderedMessages.getFirst();
         assertThat(userMessage.contents()).hasSize(2);
 
         var textContent = (TextContent) userMessage.contents().get(0);
@@ -1535,7 +1547,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("should render template variables with base64 video from input")
-    void shouldRenderTemplateVariables_whenBase64VideoFromInput() throws JsonProcessingException {
+    void shouldRenderTemplateVariables_whenBase64VideoFromInput() {
         // Given
         var trace = Trace.builder()
                 .id(UUID.randomUUID())
@@ -1572,7 +1584,7 @@ class OnlineScoringEngineTest {
 
         // Then
         assertThat(renderedMessages).hasSize(1);
-        var userMessage = (UserMessage) renderedMessages.get(0);
+        var userMessage = (UserMessage) renderedMessages.getFirst();
         assertThat(userMessage.contents()).hasSize(2);
 
         var videoContent = (VideoContent) userMessage.contents().get(1);
@@ -1581,7 +1593,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("should render mixed media with template variables")
-    void shouldRenderTemplateVariables_whenMixedMedia() throws JsonProcessingException {
+    void shouldRenderTemplateVariables_whenMixedMedia() {
         // Given
         var trace = Trace.builder()
                 .id(UUID.randomUUID())
@@ -1625,7 +1637,7 @@ class OnlineScoringEngineTest {
 
         // Then
         assertThat(renderedMessages).hasSize(1);
-        var userMessage = (UserMessage) renderedMessages.get(0);
+        var userMessage = (UserMessage) renderedMessages.getFirst();
         assertThat(userMessage.contents()).hasSize(3);
 
         var textContent = (TextContent) userMessage.contents().get(0);
@@ -1640,7 +1652,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("should render template variables in multimodal content with video URL")
-    void shouldRenderTemplateVariables_whenMultimodalContentWithVideoUrl() throws JsonProcessingException {
+    void shouldRenderTemplateVariables_whenMultimodalContentWithVideoUrl() {
         // Given
         var trace = Trace.builder()
                 .id(UUID.randomUUID())
@@ -1678,7 +1690,7 @@ class OnlineScoringEngineTest {
 
         // Then
         assertThat(renderedMessages).hasSize(1);
-        var userMessage = (UserMessage) renderedMessages.get(0);
+        var userMessage = (UserMessage) renderedMessages.getFirst();
         assertThat(userMessage.contents()).hasSize(2);
 
         var textContent = (TextContent) userMessage.contents().get(0);
@@ -1708,7 +1720,7 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("should render video URL from output field")
-    void shouldRenderTemplateVariables_whenVideoUrlFromOutput() throws JsonProcessingException {
+    void shouldRenderTemplateVariables_whenVideoUrlFromOutput() {
         // Given
         var outputWithVideo = """
                 {
@@ -1751,7 +1763,7 @@ class OnlineScoringEngineTest {
 
         // Then
         assertThat(renderedMessages).hasSize(1);
-        var userMessage = (UserMessage) renderedMessages.get(0);
+        var userMessage = (UserMessage) renderedMessages.getFirst();
         assertThat(userMessage.contents()).hasSize(2);
 
         var videoContent = (VideoContent) userMessage.contents().get(1);
@@ -1760,9 +1772,9 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("render span message templates")
-    void testRenderSpanTemplate() throws JsonProcessingException {
+    void testRenderSpanTemplate() {
         var evaluatorCode = JsonUtils.readValue(TEST_EVALUATOR,
-                com.comet.opik.api.evaluators.AutomationRuleEvaluatorSpanLlmAsJudge.SpanLlmAsJudgeCode.class);
+                AutomationRuleEvaluatorSpanLlmAsJudge.SpanLlmAsJudgeCode.class);
         var spanId = generator.generate();
         var projectId = generator.generate();
         var span = createSpan(spanId, projectId);
@@ -1784,9 +1796,9 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("prepare span LLM request with tool-calling strategy")
-    void testPrepareSpanLlmRequestWithToolCallingStrategy() throws JsonProcessingException {
+    void testPrepareSpanLlmRequestWithToolCallingStrategy() {
         var evaluatorCode = JsonUtils.readValue(TEST_EVALUATOR,
-                com.comet.opik.api.evaluators.AutomationRuleEvaluatorSpanLlmAsJudge.SpanLlmAsJudgeCode.class);
+                AutomationRuleEvaluatorSpanLlmAsJudge.SpanLlmAsJudgeCode.class);
         var span = createSpan(generator.generate(), generator.generate());
 
         var request = OnlineScoringEngine.prepareSpanLlmRequest(evaluatorCode, span, new ToolCallingStrategy());
@@ -1798,9 +1810,9 @@ class OnlineScoringEngineTest {
 
     @Test
     @DisplayName("prepare span LLM request with instruction strategy")
-    void testPrepareSpanLlmRequestWithInstructionStrategy() throws JsonProcessingException {
+    void testPrepareSpanLlmRequestWithInstructionStrategy() {
         var evaluatorCode = JsonUtils.readValue(TEST_EVALUATOR,
-                com.comet.opik.api.evaluators.AutomationRuleEvaluatorSpanLlmAsJudge.SpanLlmAsJudgeCode.class);
+                AutomationRuleEvaluatorSpanLlmAsJudge.SpanLlmAsJudgeCode.class);
         var span = createSpan(generator.generate(), generator.generate());
 
         var request = OnlineScoringEngine.prepareSpanLlmRequest(evaluatorCode, span, new InstructionStrategy());
@@ -1823,8 +1835,8 @@ class OnlineScoringEngineTest {
         assertThat(userMessage.singleText()).contains("Literal: some literal value");
     }
 
-    private com.comet.opik.api.Span createSpan(UUID spanId, UUID projectId) throws JsonProcessingException {
-        return com.comet.opik.api.Span.builder()
+    private Span createSpan(UUID spanId, UUID projectId) {
+        return Span.builder()
                 .id(spanId)
                 .projectName(PROJECT_NAME)
                 .projectId(projectId)
